css/styles.css
html, body {
  min-height: 100%;
  min-width: 100%;
  position: fixed;
}
body {
  min-height: 100%;
  min-width: 100%;
  background-color: lavenderblush;
    /* background: url('img\pexels-sergey-chetvertnykh-880639.jpg') no-repeat center center fixed;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    background-size: cover;
    -o-background-size: cover; */
  }

.text-80 {
    font-size: 80%;
}

.form-rounded {
    border-radius: 1rem;
}

.chat-container{
  height: 200px;
  width: 100%;
  overflow-y: scroll;
  overflow-x: hidden;
}

.chat-bg {
  height: 100%;
}

.textbox-container {
 max-height: 10vh;
}

.icon-size {
  font-size: 3vw;
}
input.textbox {
  height: 5vh;
  max-height: 3vmax;
  width: 100%;
}

.bg-chatbot {
  background-color: #c2bbc4;
}

.bg-user {
  background-color:rgb(185, 165, 204);
}

.size-custom {
  max-width: 75% !important; /* or 950px */
}

.top-bar {
  height: 3vh;
}

.msg-height {
  min-height: 75px;
  position: static;
} 

#footer-bottom {
  height: 53px;
  margin: 0 auto;
  overflow: hidden;
  padding: 0 40px;
  width: 940px;
}

@media (min-width: 321px) and (max-width: 375px) {
  .chat-container{
    height: 250px;
    width: 100%;
    overflow-y: scroll;
    overflow-x: hidden;
  }
}

@media (min-width: 376px) and (max-width: 480px) {
  .chat-container{
    height: 350px;
    width: 100%;
    overflow-y: scroll;
    overflow-x: hidden;
  }
}

@media (min-width: 481px) and (max-width: 600px) {
  .chat-container{
    height: 450px;
    width: 100%;
    overflow-y: scroll;
    overflow-x: hidden;
  }
}

@media (min-width: 601px) and (max-width: 799px) {
  .chat-container{
    height: 600px;
    width: 100%;
    overflow-y: scroll;
    overflow-x: hidden;
  }
}

@media (min-width: 800px) and (max-width: 1024px) {
  .chat-container{
    height: 850px;
    width: 100%;
    overflow-y: scroll;
    overflow-x: hidden;
  }
}

@media (min-width: 1025px) and (max-width: 1200px) {
  .chat-container{
    height: 850px;
    width: 100%;
    overflow-y: scroll;
    overflow-x: hidden;
  }
}

@media (min-width: 1200px) {
  .chat-container{
    height: 500px;
    width: 100%;
    overflow-y: scroll;
    overflow-x: hidden;
  }
}

